# planktonpy

./: .gitignore  LICENSE  MANIFEST.in  README.rst  build.sh  meta.yaml  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  plankton.rst
docs/source/_static/: pop-plankton.js
docs/source/_static/css/: custom.css
docs/source/rst/: getting-started.rst  graphs-embeddings.rst  installation.rst  kewl.html  pixel-maps.rst  scanpy-anndata.rst  spatial-data.rst  stats.rst  tutorial-1-data-handling.rst  tutorial-2-exploratory-analysis.rst  tutorial-2-pixelmap-integration.rst  tutorial-3-scanpy-integration.rst  tutorial-3-statistical-modelling.rst  tutorial-4-exploratory-analysis.rst  tutorial-5-statistical-modelling.rst
plankton/: __init__.py  graph.py  pixelmaps.py  plankton.py  ssam.py  stats.py  utils.py
test/HDCA-lung/: demo.ipynb  tutorial-fast-lane.ipynb
test/blank/: demo.ipynb
test/codeluppi-et-al/: demo.ipynb
test/codeluppi-et-al/data/: colorMapDict.csv  signatures.csv
test/nonn-et-al/: demo.ipynb
test/nonn-et-al/data/: 156KS_Decoded_PlacentaPanel.csv
test/qian-et-al/: demo.ipynb
test/qian-et-al/data/: signatures_proteinaltlas_xiaoyan.csv
test/qian-et-al/data/leftCA1/: cells_leftCA1_4-3.csv  celltype_leftCA1_4-3.csv  spots_w_segmentation_leftCA1_4-3.csv
test/qian-et-al/data/rightCA1/: cells_rightCA1_4-3.csv  celltype_rightCA1_4-3.csv  spots_w_segmentation_rightCA1_4-3.csv
test/tosti-et-al/data/: signatures_original.csv
test/xenium-benchmark/: Untitled.ipynb
test/yang/data/: test-tosti.ipynb
tutorials/: data-handling.ipynb  exploration.ipynb  pixel_maps.ipynb  single-cell.ipynb
