[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "planktonspace"
version = "0.0.5"
authors = [
  { name="Sebastian Tiesmeyer", email="sebastian.tiesmeyer@bih-charite.de" },
]
description = "A point process analysis package"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
              'numpy',
              'anndata',
               'scanpy',
             'jupyter',
            'matplotlib',
           'numpy',
            'pandas',
          'plotly',
          'scipy',
          'scikit-image',
        'scikit-learn',
          'umap-learn',
]
[project.urls]
"Homepage" = "https://github.com/HiDiHlabs/planktonpy"
"Bug Tracker" = "https://github.com/HiDiHlabs/planktonpy"

[tool.setuptools.packages.find]
where = ["."] 
include = ["plankton*"]  # package names should match these glob patterns (["*"] by default)